# xash3d-api

./: .gitmodules  .justfile  Cargo.toml  README.md  generate.sh
.github/workflows/: ci.yaml  release.yaml
crates/xash3d-api/: Cargo.toml  README.md
crates/xash3d-api-client/: Cargo.toml  README.md
crates/xash3d-api-client/src/: lib.rs
crates/xash3d-api-menu/: Cargo.toml  README.md
crates/xash3d-api-menu/src/: lib.rs
crates/xash3d-api-phys/: Cargo.toml  README.md
crates/xash3d-api-phys/src/: lib.rs
crates/xash3d-api-ref/: Cargo.toml  README.md
crates/xash3d-api-ref/src/: lib.rs
crates/xash3d-api-server/: Cargo.toml  README.md
crates/xash3d-api-server/src/: lib.rs
crates/xash3d-api/src/: lib.rs
include/: wrapper-client.h  wrapper-common.h  wrapper-phys-api.h  wrapper-player-move.h  wrapper-sound-api.h
src/: api.rs  client.rs  lib.rs
