[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT"
rust-version = "1.68.2"
edition = "2021"
repository = "https://github.com/numas13/xash3d-api"
authors = ["Denis Drakhnia <numas13@gmail.com>"]

[workspace.dependencies]
xash3d-api = { version = "0.2", path = "crates/xash3d-api" }
xash3d-api-server = { version = "0.1", path = "crates/xash3d-api-server" }

libc = { version = "0.2", default-features = false }
libm = { version = "0.2" }
glam = { version = "0.33", default-features = false }
