[package]
name = "xash3d-api-menu"
description = "Menu FFI definitions for Xash3D FWGS engine"
keywords = ["xash3d", "gamedev", "ffi", "bindings"]
categories = ["api-bindings", "game-development"]
version = "0.1.0"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
xash3d-api = { workspace = true, features = ["net-api"] }
